[package]
name = "simple-symbol"
version = "3.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
description = "Convenient, basic String interning."
documentation = "https://docs.rs/simple-symbol"
repository = "https://github.com/nwtnni/simple-symbol"
readme = "README.md"
keywords = ["interning", "intern", "cache", "symbol"]
license-file = "LICENSE"
edition = "2018"

[dependencies]
once_cell = "1.5"
